jar2blockset improvements

--- a/JAR TO BLOCKSET/autoparser-rules.cfg
+++ b/JAR TO BLOCKSET/autoparser-rules.cfg
@@ -1,18 +1,16 @@
 # Method used for texture names auto generation; allowed methods are:
-# "capital_all" (Purple Wool), "capital_first" (Purple wool) and "none" (null).
+# "capital_all" (Purple Wool), "capital_first" (Purple wool) and "none" (purple_wool).
 naming_capitalize = capital_all
 
-# List of suffixes to use as different sides, written as Python dics of lists.
-# See the list here: https://optifine.readthedocs.io/ctm.html#faces
-side_suffixes = {
+# List of suffixes to use as different sides, written similarly to Python dict
+# of lists. See the notation here: https://optifine.readthedocs.io/ctm.html#faces
+facing_suffixes = {
     top: 
     bottom: 
     north: 
     south: 
     east: 
     west: 
-    # Gets converted into "north south east west"
-    sides: 
-    # Gets converted into "top bottom north south east west"
-    all: 
+    # "all" is assigned as fallback if none of the suffixes matched,
+    # meaning the block uses the same single texture for every side.
 }
