--- a/JAR TO BLOCKSET/.vscode/launch.json
+++ b/JAR TO BLOCKSET/.vscode/launch.json
@@ -17,7 +17,7 @@
                 // "./examples/minecraft-1.20.1-client.jar",
                 // "./examples/minecraft-1.21.3-client.jar",
                 "1", "0",
-                "blacklist-default.cfg", "autoparser-rules.cfg"
+                "blacklist-default.yml", "autoparse-default.yml"
             ]
         }
     ]
