Add j2bs name & color calculation

--- a/JAR TO BLOCKSET/autoparse-default.yml
+++ b/JAR TO BLOCKSET/autoparse-default.yml
@@ -4,6 +4,9 @@ naming:
   textures: title
   blockset: sep
 
+# Method of avg color calculation, either legacy (resize) or modern (sqrts of mean of squares)
+colorcalc: modern
+
 # List of filters for autoparse to recognize what side a given texture is for,
 # using the same notation as in the blacklist file (see comments there).
 # See facing notation's meaning here: https://optifine.readthedocs.io/ctm.html#faces
@@ -118,8 +121,7 @@ facing:
     - cut_sandstone.png
     - cut_red_sandstone.png
     # Creaking heart
-    - creaking_heart.png
-    - creaking_heart_active.png
+    - creaking_heart$
 
   # Note that "all" is also set automatically if none of the filters matched,
   # so this section should ONLY contain override filters, NOT global filters!
