--- a/jar2blockset/.vscode/launch.json
+++ b/jar2blockset/.vscode/launch.json
@@ -1,5 +1,4 @@
 {
-    // https://www.youtube.com/watch?v=BHb0T6MLJdA
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,12 +8,13 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                // "./examples/minecraft-1.5.1-client.jar",
-                // "./examples/minecraft-1.8.9-client.jar",
-                // "./examples/minecraft-1.12.2-client.jar",
-                // "./examples/minecraft-1.14.4-client.jar",
-                // "./examples/minecraft-1.20.1-client.jar",
-                "./examples/minecraft-1.21.4-client.jar",
+                // "../data/minecraft-1.5.1-client.jar",
+                // "../data/minecraft-1.8.9-client.jar",
+                // "../data/minecraft-1.12.2-client.jar",
+                "../data/minecraft-1.14.4-client.jar",
+                // "../data/minecraft-1.20.1-client.jar",
+                // "../data/minecraft-1.21.4-client.jar",
+
                 // Default parameters
                 "1", "0",
                 "autoparser-default.yml", "blacklist-default.yml", "palettes-default.yml"
