--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # https://vite.dev/guide/static-deploy.html#github-pages
-name: Build & deploy to Pages
+name: Get & Process blocksets, then Build & Deploy
 
 on:
   push:
@@ -16,6 +16,7 @@ permissions:
 concurrency:
   group: 'pages'
   cancel-in-progress: true
+
 
 jobs:
   deploy:
@@ -37,11 +38,23 @@ jobs:
       - name: Install Pip Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r 'jar2blockset/requirements.txt'
+          pip install -r 'requirements.txt'
+        working-directory: 'jar2blockset'
 
       - name: Run Jarfetcher
         run: |
-          python -u 'jar2blockset/_jarfetcher.py' 'jar2blockset'
+          python -u '_jarfetcher.py' 'data'
+        working-directory: 'jar2blockset'
+
+      - name: Run Jar2BlockSet
+        # https://superuser.com/questions/31464/looping-through-ls-results-in-bash-shell-script
+        run: |
+          shopt -s nullglob  
+          for f in *.jar; do
+            echo "data/$f"
+            python -u '_main.py' "data/$f"
+          done
+        working-directory: 'jar2blockset'
 
 
       - name: Setup Node
@@ -56,7 +69,10 @@ jobs:
         run: npm ci
         working-directory: 'vueblocks'
 
-      # TODO: Here we need to move data dir to Vueblocks
+      - name: Move j2bs results to Vueblocks data
+        # TODO!
+        run: ls -ha
+        working-directory: 'jar2blockset/data'
 
       - name: Build Vueblocks
         run: npm run build
