--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           pip install -r 'requirements.txt'
         working-directory: 'jar2blockset'
 
-      - name: Run Jarfetcher
+      - name: Run JarFetcher
         run: |
           python -u '_jarfetcher.py' 'data'
         working-directory: 'jar2blockset'
@@ -49,9 +49,10 @@ jobs:
       - name: Run Jar2BlockSet
         # https://superuser.com/questions/31464/looping-through-ls-results-in-bash-shell-script
         run: |
-          for f in *.jar; do
-            echo "data/$f"
-            python -u '_main.py' "data/$f"
+          for f in data/*.jar; do
+            echo "$f"
+            python -u '_main.py' "$f"
+            rm "$f"
           done
         working-directory: 'jar2blockset'
 
@@ -69,8 +70,10 @@ jobs:
         working-directory: 'vueblocks'
 
       - name: Move j2bs results to Vueblocks data
-        # TODO!
-        run: ls -ha
+        run: |
+          rm -rf '../../vueblocks/data'
+          mkdir -p '../../vueblocks/data'
+          mv -v * '../../vueblocks/data'
         working-directory: 'jar2blockset/data'
 
       - name: Build Vueblocks
